@@ -1,5 +1,10 @@
 2007-01-17  OHASHI Akira  <bg66@koka-in.org>
 
+	* mixi.el: (mixi-get-matched-items): Add REVERSE argument.
+	(mixi-get-comments): Follow the change above.
+
+2007-01-17  OHASHI Akira  <bg66@koka-in.org>
+
 	* mixi.el: (mixi-realize-message): Follow the change of mixi.
 
 2007-01-17  OHASHI Akira  <bg66@koka-in.org>
